優化容器同步